...
        android:text="Login"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/passwordLogin"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogin" />

    <Button
        android:id="@+id/toSignUp"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/architects_daughter"
        android:text="Sign Up"
        android:textColor="#FFFFFF"
...
